# internal/adapters/inbound/routes/auth.go
@@ -14,6 +14,8 @@ func registerAuth(v1 *gin.RouterGroup, auth AuthMiddleware, c Controllers) {
 	post(none, "/auth/password/forgot", "auth.password.forgot", g, AuthNone, c, c.Auth.PasswordForgot)
 	get(none, "/auth/password/reset/:param1", "auth.password.reset_token_validity", g, AuthNone, c, c.Auth.PasswordResetValidity)
 	post(none, "/auth/password/reset", "auth.password.reset", g, AuthNone, c, c.Auth.PasswordReset)
+	get(none, "/auth/oauth/:param1/start", "auth.oauth.start", g, AuthNone, c, c.Auth.OAuthStart)
+	post(none, "/auth/oauth/:param1/callback", "auth.oauth.callback", g, AuthNone, c, c.Auth.OAuthCallback)
 	post(none, "/auth/2fa/challenge", "auth.2fa.challenge", g, AuthNone, c, c.Auth.TwoFactorChallenge)
 
 	required := v1.Group("")
